# pystage

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg
block-images/: .gitignore  cleanup.sh  crawl-images.md  export-png.sh  langs.json
doc/: README.md
doc/source/: conf.py  pystage.de.rst  pystage.rst
docs/: README.md  build.bat  requirements.txt
docs/source/: conf.py  index.rst  languages.rst  modules.rst  pystage.convert.rst  pystage.core.rst  pystage.de.rst  pystage.en.rst  pystage.rst
docs/source/_templates/: package.rst_t
src/: broadcast_messages.py  dayssince2000.py  example.py  example_bounce.py  example_de.py  example_en.py  example_en_ask.py  example_en_ghost.py  example_en_pen.py  example_en_turtle1.py  example_messages.py  example_monitors.py  example_positiontests.py  example_say.py  looks1.py  stop_all.py  time_sensing_functions.py  touching_mouse.py
src/chalk/: __init__.py  chalk.py
src/pystage/: __init__.py  _control.py  _events.py  _looks.py  _looks_sprite.py  _motion.py  _sensing.py  _sound.py  code_block.py  constants.py  costume.py  gui.py  l10n.py  sprite.py  stage.py  util.py
src/pystage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pystage/convert/: __init__.py  code_writer.py  sb3.py  sb3_templates.py
src/pystage/core/: __init__.py  _base_sprite.py  (+21 more)
tests/: README.md  compare.py  diff.py  generate.py  init.py  test_convert.py  test_operators.py
tests/tests/: test_convert.py  test_operators.py  test_var.py
time_sensing_functions/: time_sensing_functions.py
(+387 files in other folders)
