[metadata]
name = pystage
version = 0.0.4
author = Kai Eckert
author_email = eckert@hdm-stuttgart.de
description = Scratch-like Python programming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pystage/pystage
license = MIT
project_urls =
    Bug Tracker = https://github.com/pystage/pystage/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pygame

[options.packages.find]
where = src

[options.package_data]
pystage = images/*
